--- a/FW/MDK-ARM/Watering control.uvprojx
+++ b/FW/MDK-ARM/Watering control.uvprojx
@@ -429,6 +429,11 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f1xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>ring_buffer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\ring_buffer.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
